Avoid FOUC scrollbars on property labels
Property labels that span three lines show a scrollbar while the
page is loading. An example can be seen at
https://www.wikidata.org/wiki/Q14645413?uselang=en
(disable JavaScript to see it).

--- a/view/resources/wikibase/wikibase.css
+++ b/view/resources/wikibase/wikibase.css
@@ -193,6 +193,7 @@ div.wikibase-statementview textarea {
 	float: left;
 	word-wrap: break-word;
 	padding: 10px;
+	padding-bottom: 0; /* avoid scrollbars on multi-line property labels */
 	-webkit-transition: top 0.1s ease-out;
 	transition: top 0.1s ease-out;
 }
